@@ -1,3 +1,8 @@
+2003-05-19  Keisuke Nishida  <knishida@netlab.jp>
+
+	* cobc.h (CB_STANDARD_GNU): New standard.
+	* cobc.h, cobc.c (cb_standard): Default compiler is now gnu.
+
 2003-05-18  Keisuke Nishida  <knishida@netlab.jp>
 
 	* cobc.c (short_options): New option `-O'
